# butia_manipulation

./: .gitignore  README.md  mav.parm
butia_manipulation_control/: CMakeLists.txt  package.xml
butia_manipulation_control/config/: butia_manipulation_control.yaml
butia_manipulation_control/launch/: butia_manipulation_control.launch  butia_manipulation_rqt.launch  butia_manipulation_rqt.perspective
butia_manipulation_description/: CMakeLists.txt  package.xml
butia_manipulation_description/launch/: butia_manipulation.rviz  butia_manipulation_rviz.launch
butia_manipulation_description/urdf/: butia_manipulation.gazebo  butia_manipulation.xacro
butia_manipulation_description/urdf/meshes/: base_gripper.STL  gripper_left.dae  gripper_right.STL  hearth_gripper.STL  hearth_gripper.dae  shoulder_elbow.dae  shoulderpitch.STL  shoulderyaw.STL  shoulderyaw.dae
butia_manipulation_dynamixel_interface/: CMakeLists.txt  package.xml
butia_manipulation_dynamixel_interface/scripts/: PyDynamixel_v2.py  butia_manipulation_dynamixel_interface.py  butia_manipulation_dynamixel_interface_command.py  butia_manipulation_dynamixel_interface_state.py  defines.py
butia_manipulation_gazebo/: CMakeLists.txt  package.xml
butia_manipulation_gazebo/launch/: butia_manipulation_world.launch
butia_manipulation_gazebo/worlds/: butia_manipulation.world
butia_manipulation_kinematics/: CMakeLists.txt  package.xml
butia_manipulation_kinematics/scripts/: PyDynamixel_v2.py  butia_manipulation_arm_control.py  butia_manipulation_arm_control_gazebo.py  defines.py  kinematics.py
doris_control/: CMakeLists.txt  package.xml
doris_control/config/: doris_control.yaml
doris_control/launch/: doris_control.launch  doris_rqt.launch
doris_description/: CMakeLists.txt  package.xml
doris_description/launch/: doris.rviz  doris_rviz.launch
doris_description/urdf/: doris.gazebo  doris.xacro
doris_description/urdf/meshes/: base_gripper.dae  elbow_wrist.dae  gripper_left.STL  gripper_right.dae  gripper_roll.STL  gripper_yaw.STL  gripper_yaw.dae
doris_gazebo/: CMakeLists.txt  package.xml
doris_gazebo/launch/: doris_world.launch
doris_gazebo/worlds/: doris.world
doris_kinematics/: CMakeLists.txt  package.xml
doris_kinematics/scripts/: doris_arm_control.py  kinematics.py  kinematics_backup.py
first_plugin/: main.py  topicCartesianState.py
plane/logs/2019-05-07/flight1/: flight.tlog  flight.tlog.raw
