<?xml version="1.0"?>
<package>
  <name>butia_manipulation_description</name>
  <version>0.0.0</version>
  <description>The butia_manipulation_description package</description>

  <maintainer email="ricardogrando13@gmail.com">Ricardo Grando</maintainer>

  <license>BSD</license>

  <author email="ricardogrando13@gmail.com">Ricardo Grando</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
