<?xml version="1.0"?>
<package>
  <name>doris_control</name>
  <version>0.0.0</version>
  <description>The doris_control package</description>

  <maintainer email="ricardogrando13@gmail.com">Ricardo Grando</maintainer>

  <license>BSD</license>

  <author email="ricardogrando13@gmail.com">Ricardo Grando</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
