<?xml version="1.0"?>
<package>
  <name>doris_kinematics</name>
  <version>0.0.0</version>
  <description>The doris_kinematicspackage</description>

  <maintainer email="ricardogrando13@gmail.com">Ricardo Grando</maintainer>

  <license>BSD</license>

  <author email="ricardogrando13@gmail.com">Ricardo Grando</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>inno_arm_control_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>inno_arm_control_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>

</package>
